  * checks/debhelper:
    + [RA] CDBS now defaults to a debhelper compatibility level of V5.
  * checks/fields:
    + [RA] The CDBS ant rules are in class, not rules.  Thanks, Cyril
      Brulebois.  (Closes: #460168)
  * checks/files.desc:
    + [RA] In many of the long descriptions for symlink-related tags,
      mention that running dh_link will fix symlink problems.
  * checks/menu-format:
    + [RA] Avoid a Perl warning for desktop entries without Exec.

  * frontend/lintian:
    + [RA] Include info tags in the broken-down description of the
      override count since they're included in the total.  Based on a
      patch by Chris Lamb.  (Closes: #459851)

  * lib/Spelling.pm:
    + [RA] Add a spelling correction for PostgreSQL and lots of new
      capitalization corrections after a debian-devel thread.

 -- Russ Allbery <rra@debian.org>  Mon, 21 Jan 2008 17:36:01 -0800

lintian (1.23.42) unstable; urgency=low

  The "what did you do on your Christmas vacation?" release.

  * checks/binaries:
    + [RA] Don't warn about unstripped binaries in .../lib/debug.  Some
      packages include debugging symbols in the main package.
    + [RA] Allow rpath pointing to /usr/lib/games/<package>.  Thanks, Bas
      Wijnen.  (Closes: #456318)
    + [RA] Exclude nsswitch modules from multiple SONAME and package
      naming checks.
  * checks/changelog-file{.desc,}:
    + [RA] Don't spell-check lines that include the word "spelling".
      Thanks, Andreas Hoenen.  (Closes: #456515)
    + [RA] Allow long no-whitespace lines even when spaces or bullets
      precede the text.
  * checks/common_data.pm:
    + [RA] Remove the obsolete base section.  (Policy change pending).
  * checks/control-file{.desc,}:
    + [RA] Include the package name in stronger-dependency-implies-weaker.
    + [RA] Fix stronger-dependency-implies-weaker description cut and
      paste error.  Thanks, Rafael Laboissiere.  (Closes: #456405)
  * checks/copyright-file{.desc,}: